--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
 
     <div class="container">
       <div class="row">
-        <div class="input-group ">
-          <span class="input-group-text col-2">Search</span>
+        <div class="input-group">
+          <span class="input-group-text col-2">SEARCH</span>
           <div class="col-6"></div>
-          <div class="col-4"><input type="text" aria-label="First name " class="form-control" /></div>
+          <div class="col-4">
+            <input type="text" aria-label="First name " class="form-control" />
+          </div>
         </div>
-    </div>
+      </div>
     </div>
   </body>
 </html>
